ARM: dts: dra7: Add inactive state for McASP3
McASP3 is configured for tx/rx inactive state

Change-Id: I766dcbea9190083c6fe0e01501104226d480a22f
Signed-off-by: Misael Lopez Cruz <misael.lopez@ti.com>
Signed-off-by: Charulatha Varadarajan <charu@ti.com>

--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -1179,4 +1179,7 @@
 		0 0 0 0
 		0 0 0 0
 	>;
+
+	ti,tx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
+	ti,rx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
 };
