ASoC: DRA7: dra7-evm: Add initial support
Add initial support for DRA7 EVM, it includes the media DAI link that
connects McASP3 and tlv320aic3106 in I2S mode.

DRA7xx is a high-performance, infotainment application device, based on
enhanced OMAP architecture integrated on a 28-nm technology.

Change-Id: I3cf51514fa8d2f2f42c49955a3a4d6653707fbda
Signed-off-by: Misael Lopez Cruz <misael.lopez@ti.com>
Signed-off-by: Charulatha Varadarajan <charu@ti.com>
Signed-off-by: Nikhil Devshatwar <nikhil.nd@ti.com>

--- a/sound/soc/omap/Kconfig
+++ b/sound/soc/omap/Kconfig
@@ -70,9 +70,12 @@ config SND_OMAP_SOC_AM3517EVM
 	  Say Y if you want to add support for SoC audio on the OMAP3517 / AM3517
 	  EVM.
 
-config SND_OMAP_SOC_DRA7EVM
+config SND_SOC_DRA7_EVM
 	tristate "SoC Audio support for DRA7 EVM"
 	depends on SND_OMAP_SOC && SOC_DRA7XX
+	select SND_DAVINCI_SOC_MCASP
+	select SND_SOC_TLV320AIC3X
+	select SND_DRA7_SOC_ATL
 	select SND_DAVINCI_SOC_GENERIC_EVM
 	help
 	  Say Y if you want to add support for SoC audio on the DRA7 EVM.
