--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -55,12 +55,9 @@
 	};
 
 	sound {
-		compatible = "ti,dra7xx-evm-audio";
+		compatible = "ti,dra7-evm-sound";
 		ti,model = "DRA7xx-EVM";
 		ti,always-on;
-		ti,audio-codec = <&tlv320aic3106>;
-		ti,mcasp-controller = <&mcasp3>;
-		ti,codec-clock-rate = <5644800>;
 		clocks = <&atl_clkin2_ck>;
 		clock-names = "ti,codec-clock";
 		ti,audio-routing =
@@ -72,7 +69,31 @@
 			"MIC3R",		"Mic Bias 2V",
 			"Mic Bias 2V",		"Main Mic",
 			"Line Out",		"LLOUT",
-			"Line Out",		"RLOUT";
+			"Line Out",		"RLOUT",
+			"J3A LINE1L",		"JAMR3 Stereo Aux In",
+			"J3A LINE1R",		"JAMR3 Stereo Aux In",
+			"J3B LINE1L",		"JAMR3 Mono Mic 1",
+			"J3B LINE1R",		"JAMR3 Mono Mic 2",
+			"JAMR3 Line Out 1",	"J3A LLOUT",
+			"JAMR3 Line Out 1",	"J3A RLOUT",
+			"JAMR3 Line Out 2",	"J3B LLOUT",
+			"JAMR3 Line Out 2",	"J3B RLOUT",
+			"JAMR3 Line Out 3",	"J3C LLOUT",
+			"JAMR3 Line Out 3",	"J3C RLOUT";
+
+		/* Media DAI link */
+		ti,media-cpu = <&mcasp3>;
+		ti,media-codec = <&tlv320aic3106>;
+		ti,media-mclk-freq = <5644800>;
+		ti,media-slots = <2>;
+
+		/* Multichannel DAI link */
+		ti,multichannel-codec-a = <&tlv320aic3106a>;
+		ti,multichannel-codec-b = <&tlv320aic3106b>;
+		ti,multichannel-codec-c = <&tlv320aic3106c>;
+		ti,multichannel-slots = <8>;
+		ti,multichannel-mclk-freq = <11289600>;
+		ti,multichannel-shared;
 	};
 
 	radio {
@@ -1107,6 +1128,40 @@
 	lvds_ser6: ds90ub913aq@79 {
 		compatible = "ti,ds90ub913aq";
 		reg = <0x79>;
+	};
+
+	tlv320aic3106a: tlv320aic3106@18 {
+		compatible = "ti,tlv320aic3106";
+		reg = <0x18>;
+		status = "okay";
+
+		/* Regulators */
+		AVDD-supply = <&evm_3v3_sw>;
+		IOVDD-supply = <&evm_3v3_sw>;
+		DRVDD-supply = <&evm_3v3_sw>;
+		DVDD-supply = <&aic_dvdd_1v8>;
+	};
+
+	tlv320aic3106b: tlv320aic3106@19 {
+		compatible = "ti,tlv320aic3106";
+		reg = <0x19>;
+		status = "okay";
+
+		IOVDD-supply = <&evm_3v3_sw>;
+		DVDD-supply = <&aic_dvdd_1v8>;
+		AVDD-supply = <&evm_3v3_sw>;
+		DRVDD-supply = <&evm_3v3_sw>;
+	};
+
+	tlv320aic3106c: tlv320aic3106@1a {
+		compatible = "ti,tlv320aic3106";
+		reg = <0x1a>;
+		status = "okay";
+
+		IOVDD-supply = <&evm_3v3_sw>;
+		DVDD-supply = <&aic_dvdd_1v8>;
+		AVDD-supply = <&evm_3v3_sw>;
+		DRVDD-supply = <&evm_3v3_sw>;
 	};
 };
 
