ARM: dts: dra7-evm: Add McASP6 pinctrl
Add pinctrl entries for McASP6 and configure in PD mode

Change-Id: I507ad5941cf679a4afab98fcca7cbeba5fe5cad8
Signed-off-by: Misael Lopez Cruz <misael.lopez@ti.com>
Signed-off-by: Charulatha Varadarajan <charu@ti.com>

--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -89,6 +89,7 @@
 		&vout1_pins
 		&irq_pins
 		&atl_pins
+		&mcasp6_pins
 		&hpd_pin
 	>;
 
@@ -469,6 +470,15 @@
 			0x328 0x10000	/* mcasp3_fsx.mcasp3_fsx	Mode0.Output.PD */
 			0x32c 0x10000	/* mcasp3_axr0.mcasp3_axr0	Mode0.Output.PD */
 			0x330 0x50000	/* mcasp3_axr1.mcasp3_axr1	Mode0.Input.PD */
+		>;
+	};
+
+	mcasp6_pins: pinmux_mcasp6_pins {
+		pinctrl-single,pins = <
+			0x2d4 0x10000	/* mcasp6_aclkx.mcasp6aclkx	Mode0.Output.PD */
+			0x2d8 0x10000	/* mcasp6_fsx.mcasp6_fsx	Mode0.Output.PD */
+			0x2dc 0x10000	/* mcasp6_axr0.mcasp6_axr0	Mode0.Output.PD */
+			0x2e0 0x50000	/* mcasp6_axr1.mcasp6_axr1	Mode0.Input.PD */
 		>;
 	};
 
