omapdss/panel/lg101: add FPD panel driver to support LG's 10" display
Add FPD panel driver to support LG101 display.

Change-Id: I1b6d3431a8d65bc03ddf3bfd24793e04003d5d78
Signed-off-by: Dandawate Saket <dsaket@ti.com>
[Reworked quite a bit for 3.12 kernel]
Signed-off-by: Somnath Mukherjee <somnath@ti.com>

--- a/drivers/video/omap2/displays-new/Kconfig
+++ b/drivers/video/omap2/displays-new/Kconfig
@@ -92,6 +92,13 @@ config DISPLAY_PANEL_TFCS9700
 		A TFT LCD DPI panel used on the LCD daughter board
 		of Vayu EVM
 
+config DISPLAY_PANEL_LG101
+	tristate "LG101 LCD Panel"
+	depends on OMAP2_DSS_DPI && I2C
+	help
+		LCD Panel used in TI's J6 evm board attachable on
+		LCDx interface.
+
 endmenu
 
 menu "Serializer Deserializer drivers"
