--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -97,6 +97,10 @@
 		ti,multichannel-slots = <8>;
 		ti,multichannel-mclk-freq = <11289600>;
 		ti,multichannel-shared;
+
+		/* Bluetooth */
+		ti,bt-cpu = <&mcasp7>;
+		ti,bt-bclk-freq = <512000>;
 	};
 
 	radio {
@@ -564,6 +568,15 @@
 			0x2d8 0x401a1	/* mcasp1_axr9.mcasp6_axr1	Mode1.Input.PD */
 			0x2dc 0x001a1	/* mcasp1_axr10.mcasp6_clkx	Mode1.Output.PD */
 			0x2e0 0x001a1	/* mcasp1_axr11.mcasp6_fsx	Mode1.Output.PD */
+		>;
+	};
+
+	mcasp7_pins: pinmux_mcasp7_pins {
+		pinctrl-single,pins = <
+			0x2e4 0x501a1	/* mcasp1_axr12.mcasp7_axr0 Mode1.Input.PD */
+			0x2e8 0x101a1	/* mcasp1_axr13.mcasp7_axr1 Mode1.Output.PD */
+			0x2ec 0x501a1	/* mcasp1_axr14.mcasp7_clkx Mode1.Input.PD */
+			0x2f0 0x501a1	/* mcasp1_axr15.mcasp7_fsx  Mode1.Input.PD */
 		>;
 	};
 
@@ -1558,4 +1571,21 @@
 
 	ti,tx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
 	ti,rx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
+};
+
+&mcasp7 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&mcasp7_pins>;
+
+	status = "okay";
+
+	op-mode = <0>;          /* MCASP_IIS_MODE */
+	tdm-slots = <2>;
+	num-serializer = <4>;
+	serial-dir = <2 1 0 0>;	/* 0:INACTIVE, 1:TX, 2:RX */
+
+	ti,tx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
+	ti,rx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
+	tx-num-evt = <8>;
+	rx-num-evt = <8>;
 };
