--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -91,6 +91,7 @@
 		&atl_pins
 		&mcasp6_pins
 		&hpd_pin
+		&radio_pins
 	>;
 
 	atl_pins: pinmux_atl_pins {
@@ -503,6 +504,23 @@
 			0x3b8	0x5000e	/* gpio7_12 INPUT | MODE14 */
 		>;
 	};
+
+	radio_pins: pinmux_radio_pins {
+		pinctrl-single,pins = <
+			0x02F4	 0x40000 /* MCASP2_ACLKX: Mode0.Input.PD */
+			0x02F8	 0xc0000 /* MCASP2_AFSX: Mode0.Input.PD */
+			0x0304	 0x40000 /* MCASP2_AXR0: Mode0.Input.PD */
+			0x0308	 0x40000 /* MCASP2_AXR1: Mode0.Input.PD */
+			0x030C	 0xc0000 /* MCASP2_AXR2: Mode0.Input.PD */
+			0x0310	 0xc0000 /* MCASP2_AXR3: Mode0.Input.PD */
+			0x0314	 0x40000 /* MCASP2_AXR4: Mode0.Input.PD */
+			0x0318	 0x40000 /* MCASP2_AXR5: Mode0.Input.PD */
+			0x031c	 0x40000 /* MCASP2_AXR6: Mode0.Input.PD */
+			0x0320	 0x40000 /* MCASP2_AXR7: Mode0.Input.PD */
+			0x02A0	 0x5000e /* GPIO6_20: Mode15.Input.PD */
+		>;
+	};
+
 };
 
 &i2c1 {
