ARM: dts: dra7: switch to using ABB regulator
ABB regulator chains the request over to AVS regulator in the right
sequence needed.

So, switch over to ABB regulator.

Change-Id: Iaeefd918b30fb7bc0cd1471c7e1b53048ef7258b
Signed-off-by: Ravikumar Kattekola <rk@ti.com>

--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -114,7 +114,7 @@
 
 	ocp {
 		gpu: gpu@0x56000000 {
-			gpu-supply = <&avs_gpu>;
+			gpu-supply = <&abb_gpu>;
 		};
 	};
 
@@ -1079,7 +1079,7 @@
 };
 
 &cpu0 {
-	cpu0-supply = <&avs_mpu>;
+	cpu0-supply = <&abb_mpu>;
 };
 
 / {
