--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -75,6 +75,27 @@
 			"Line Out",		"RLOUT";
 	};
 
+	radio {
+		compatible = "ti,dra7xx_radio";
+		gpios = <&gpio6 20 0>;
+
+		radio_helper1 {
+			compatible = "ti,dra7xx_radio_subdev";
+			ti,hwmods = "mcasp2";
+			status = "okay";
+		};
+
+		radio_helper2 {
+			compatible = "ti,dra7xx_radio_subdev";
+			ti,hwmods = "mcasp6";
+			status = "okay";
+			clocks = <&mcasp6_ahclkx_mux>;
+			clock-names = "fck";
+			clock-frequency = <11289600>;
+			fck_parent = "atl_clkin1_ck";
+		};
+	};
+
 	ocp {
 		gpu: gpu@0x56000000 {
 			gpu-supply = <&avs_gpu>;
