--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -96,6 +96,22 @@
 		};
 	};
 
+       vmmcwl_fixed: fixedregulator-mmcwl {
+               compatible = "regulator-fixed";
+               regulator-name = "vmmcwl_fixed";
+               regulator-min-microvolt = <1800000>;
+               regulator-max-microvolt = <1800000>;
+               gpio = <&gpio5 8 0>;    /* gpio5_8 */
+               startup-delay-us = <70000>;
+               enable-active-high;
+       };
+
+       wlcore {
+               compatible = "wlcore";
+               gpio = <135>;
+       };
+
+
 	ocp {
 		gpu: gpu@0x56000000 {
 			gpu-supply = <&avs_gpu>;
@@ -113,6 +129,8 @@
 		&mcasp6_pins
 		&hpd_pin
 		&radio_pins
+		&wl_pins
+		&wlirq_pins
 	>;
 
 	atl_pins: pinmux_atl_pins {
@@ -542,6 +560,24 @@
 		>;
 	};
 
+       wl_pins: pinmux_wl_pins {
+               pinctrl-single,pins = <
+                       0x3e8 0x60003   /* MMC4_CLK: INPUTENABLE | PULLUP | MODE3 */
+                       0x3ec 0x60003   /* MMC4_CMD: INPUTENABLE | PULLUP | MODE3 */
+                       0x3f0 0x60003   /* MMC4_DAT0: INPUTENABLE | PULLUP | MODE3 */
+                       0x3f4 0x60003   /* MMC4_DAT1: INPUTENABLE | PULLUP | MODE3 */
+                       0x3f8 0x60003   /* MMC4_DAT2: INPUTENABLE | PULLUP | MODE3 */
+                       0x3fc 0x60003   /* MMC4_DAT3: INPUTENABLE | PULLUP | MODE3 */
+                       0x2cc 0x2000E   /* WLAN_EN: OUTPUT | MODE14 */
+               >;
+       };
+
+       wlirq_pins: pinmux_wlirq_pins {
+               pinctrl-single,pins = <
+                       0x2c8 0x106000E /* WLAN_IRQ: INPUT | WAKEUP_ENABLE | MODE 14 */
+               >;
+       };
+
 };
 
 &i2c1 {
@@ -946,6 +982,15 @@
 	bus-width = <8>;
 	ti,non-removable;
 	cap-mmc-dual-data-rate;
+};
+
+&mmc4 {
+       status = "okay";
+       vmmc-supply = <&vmmcwl_fixed>;
+       bus-width = <4>;
+       cap-power-off-card;
+       keep-power-in-suspend;
+       ti,non-removable;
 };
 
 &vip1 {
