--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -91,6 +91,7 @@
 		ti,media-slots = <2>;
 
 		/* Multichannel DAI link */
+		ti,multichannel-cpu = <&mcasp6>;
 		ti,multichannel-codec-a = <&tlv320aic3106a>;
 		ti,multichannel-codec-b = <&tlv320aic3106b>;
 		ti,multichannel-codec-c = <&tlv320aic3106c>;
@@ -111,16 +112,6 @@
 			compatible = "ti,dra7xx_radio_subdev";
 			ti,hwmods = "mcasp2";
 			status = "okay";
-		};
-
-		radio_helper2 {
-			compatible = "ti,dra7xx_radio_subdev";
-			ti,hwmods = "mcasp6";
-			status = "okay";
-			clocks = <&mcasp6_ahclkx_mux>;
-			clock-names = "fck";
-			clock-frequency = <11289600>;
-			fck_parent = "atl_clkin1_ck";
 		};
 	};
 
@@ -165,7 +156,6 @@
 		&vout1_pins
 		&irq_pins
 		&atl_pins
-		&mcasp6_pins
 		&hpd_pin
 		&radio_pins
 		&wl_pins
@@ -1571,6 +1561,25 @@
 
 	ti,tx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
 	ti,rx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
+};
+
+&mcasp6 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&mcasp6_pins>;
+
+	fck_parent = "atl_clkin1_ck";
+
+	status = "okay";
+
+	op-mode = <0>;          /* MCASP_IIS_MODE */
+	tdm-slots = <8>;
+	num-serializer = <4>;
+	serial-dir = <1 2 0 0>;	/* 0:INACTIVE, 1:TX, 2:RX */
+
+	ti,tx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
+	ti,rx-inactive-mode = <2>; /* 0: Hi_Z, 2: Low, 3: High */
+	tx-num-evt = <8>;
+	rx-num-evt = <8>;
 };
 
 &mcasp7 {
