--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -896,6 +896,210 @@
 			};
 		};
 	};
+
+        ov10635@30 {
+		compatible = "omnivision,ov10635";
+		reg = <0x30>;
+
+		port {
+			ovcam: endpoint {
+				hsync-active = <1>;
+				vsync-active = <1>;
+				pclk-sample = <1>;
+			};
+		};
+	};
+
+        ov10635@38 {
+		compatible = "omnivision,ov10635";
+		reg = <0x38>;
+		deserializer = <&lvds_des1>;
+		serializer = <&lvds_ser1>;
+
+		port {
+			cam1: endpoint {
+				hsync-active = <1>;
+				vsync-active = <1>;
+				pclk-sample = <0>;
+			};
+		};
+	};
+
+	ov10635@39 {
+		compatible = "omnivision,ov10635";
+		reg = <0x39>;
+		deserializer = <&lvds_des2>;
+		serializer = <&lvds_ser2>;
+
+		port {
+			cam2: endpoint {
+				hsync-active = <1>;
+				vsync-active = <1>;
+				pclk-sample = <0>;
+			};
+		};
+	};
+
+	ov10635@3a {
+		compatible = "omnivision,ov10635";
+		reg = <0x3a>;
+		deserializer = <&lvds_des3>;
+		serializer = <&lvds_ser3>;
+
+		port {
+			cam3: endpoint {
+				hsync-active = <1>;
+				vsync-active = <1>;
+				pclk-sample = <0>;
+			};
+		};
+	};
+
+	ov10635@3b {
+		compatible = "omnivision,ov10635";
+		reg = <0x3b>;
+		deserializer = <&lvds_des4>;
+		serializer = <&lvds_ser4>;
+
+		port {
+			cam4: endpoint {
+				hsync-active = <1>;
+				vsync-active = <1>;
+				pclk-sample = <0>;
+			};
+		};
+	};
+
+	ov10635@3c {
+		compatible = "omnivision,ov10635";
+		reg = <0x3c>;
+		deserializer = <&lvds_des5>;
+		serializer = <&lvds_ser5>;
+
+		port {
+			cam5: endpoint {
+				hsync-active = <1>;
+				vsync-active = <1>;
+				pclk-sample = <0>;
+			};
+		};
+	};
+
+	ov10635@3d {
+		compatible = "omnivision,ov10635";
+		reg = <0x3d>;
+		deserializer = <&lvds_des6>;
+		serializer = <&lvds_ser6>;
+
+		port {
+			cam6: endpoint {
+				hsync-active = <1>;
+				vsync-active = <1>;
+				pclk-sample = <0>;
+			};
+		};
+	};
+
+	/*
+	 * This is a HDMI reciever which conflicts with the I2C addresses
+	 * of I/O expanders. It needs to be configured to use some other
+	 * address.
+	 */
+	hdmirec: hdmirec@31 {
+		compatible = "no,one";
+		reg=<0x31>;
+	};
+
+	/*
+	 * These are I/O expanders which drive some signals of the deserializer
+	 * Each 16bit I/O expander drives two deserializers
+	 * The mapping of I/O expanders and deserializer is as follows:-
+	 * I/O Expander	| Deserializer
+	 * -------------+----------------
+	 * Exp1(0x27)	| lvds_des1(0x60)
+	 * Exp1(0x27)	| lvds_des2(0x64)
+	 * Exp1(0x21)	| lvds_des3(0x68)
+	 * Exp1(0x21)	| lvds_des4(0x6c)
+	 * Exp1(0x25)	| lvds_des5(0x61)
+	 * Exp1(0x25)	| lvds_des6(0x69)
+	 */
+	expander@27 {
+		compatible = "ti,i2cexp";
+		reg=<0x27>;
+		hdmirec = <&hdmirec>;
+	};
+
+	expander@21 {
+		compatible = "ti,i2cexp";
+		reg=<0x21>;
+		hdmirec = <&hdmirec>;
+	};
+
+	expander@25 {
+		compatible = "ti,i2cexp";
+		reg=<0x25>;
+		hdmirec = <&hdmirec>;
+	};
+
+	lvds_des1: ds90ub914aq@60 {
+		compatible = "ti,ds90ub914aq";
+		reg = <0x60>;
+	};
+
+	lvds_ser1: ds90ub913aq@74 {
+		compatible = "ti,ds90ub913aq";
+		reg = <0x74>;
+	};
+
+	lvds_des2: ds90ub914aq@64 {
+		compatible = "ti,ds90ub914aq";
+		reg = <0x64>;
+	};
+
+	lvds_ser2: ds90ub913aq@75 {
+		compatible = "ti,ds90ub913aq";
+		reg = <0x75>;
+	};
+
+	lvds_des3: ds90ub914aq@68 {
+		compatible = "ti,ds90ub914aq";
+		reg = <0x68>;
+	};
+
+	lvds_ser3: ds90ub913aq@76 {
+		compatible = "ti,ds90ub913aq";
+		reg = <0x76>;
+	};
+
+	lvds_des4: ds90ub914aq@6c {
+		compatible = "ti,ds90ub914aq";
+		reg = <0x6c>;
+	};
+
+	lvds_ser4: ds90ub913aq@77 {
+		compatible = "ti,ds90ub913aq";
+		reg = <0x77>;
+	};
+
+	lvds_des5: ds90ub914aq@61 {
+		compatible = "ti,ds90ub914aq";
+		reg = <0x61>;
+	};
+
+	lvds_ser5: ds90ub913aq@78 {
+		compatible = "ti,ds90ub913aq";
+		reg = <0x78>;
+	};
+
+	lvds_des6: ds90ub914aq@69 {
+		compatible = "ti,ds90ub914aq";
+		reg = <0x69>;
+	};
+
+	lvds_ser6: ds90ub913aq@79 {
+		compatible = "ti,ds90ub913aq";
+		reg = <0x79>;
+	};
 };
 
 &i2c3 {
@@ -1030,13 +1234,53 @@
 };
 
 &vin1a {
+	endpoint@2 {
+		slave-mode;
+		remote-endpoint = <&cam1>;
+	};
+	endpoint@4 {
+		slave-mode;
+		remote-endpoint = <&cam_fpdlink>;
+	};
 	endpoint@0 {
 		slave-mode;
 		remote-endpoint = <&onboardLI>;
 	};
 	endpoint@1 {
 		slave-mode;
+		remote-endpoint = <&ovcam>;
+	};
+	endpoint@3 {
+		slave-mode;
 		remote-endpoint = <&tvp5158>;
+	};
+};
+
+&vin2a {
+	endpoint@0 {
+		slave-mode;
+		remote-endpoint = <&cam2>;
+	};
+};
+
+&vin3a {
+	endpoint@0 {
+		slave-mode;
+		remote-endpoint = <&cam3>;
+	};
+};
+
+&vin5a {
+	endpoint@0 {
+		slave-mode;
+		remote-endpoint = <&cam4>;
+	};
+};
+
+&vin6a {
+	endpoint@0 {
+		slave-mode;
+		remote-endpoint = <&cam6>;
 	};
 };
 
