omapdss: Move serdes drivers to displays-new
In K3.12, drivers/video/omap2/displays is renamed to
drivers/video/omap2/displays-new directory.
Move the SERDES drivers into the new directory.

These are the drivers needed for controlling the serializer
and deserializer chips needed for FPDlink or LVDS use cases.
It allows serialization of parallel port digital video and
controlled via i2c bus. The remote end is also registered
as an i2c alias by tunneling I2C commands through the
SERDES link.

The drivers were originally added in the following commits
c0ff72e9cf1b: Deserializer: Add support for deserializer
1d3a8e54be14: SERLINK: Support for serial link

Change-Id: I04d28f7a53c41d1b9d076df6c0b1f7bd75307570
Signed-off-by: Nikhil Devshatwar <nikhil.nd@ti.com>

--- a/drivers/video/omap2/displays-new/Kconfig
+++ b/drivers/video/omap2/displays-new/Kconfig
@@ -93,3 +93,26 @@ config DISPLAY_PANEL_TFCS9700
 		of Vayu EVM
 
 endmenu
+
+menu "Serializer Deserializer drivers"
+
+config VIDEO_SERLINK
+	tristate "SERLINK"
+	depends on I2C
+	help
+		This driver is used for configuring video serializer.
+		This is needed when capturing video from LVDS camera
+		or displaying to FPDlink display.
+		This driver won't configure the device directly, the
+		camera driver sends I2C commands for configuration.
+
+config VIDEO_DSERLINK
+	tristate "DSERLINK"
+	depends on I2C
+	help
+		This driver is used for configuring video deserializer.
+		This is needed when capturing video from LVDS camera or
+		displaying to FPDlink display.
+		This driver won't configure the device directly, the
+		camera driver sends I2C commands for configuration.
+endmenu
