ARM: dts: dra7-evm: Fix Mic bias name in sound node
Fix the incorrect Mic Bias name in dts file

Change-Id: I735b87f2fc99d1dbdd52703ee49ea4e85446cb03
Signed-off-by: Charulatha Varadarajan <charu@ti.com>
Signed-off-by: Nikhil Devshatwar <nikhil.nd@ti.com>

--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -68,9 +68,9 @@
 			"Headphone Jack",       "HPROUT",
 			"LINE1L",               "Line In",
 			"LINE1R",               "Line In",
-			"MIC3L",		"Mic Bias 2V",
-			"MIC3R",		"Mic Bias 2V",
-			"Mic Bias 2V",		"Main Mic",
+			"MIC3L",		"Mic Bias",
+			"MIC3R",		"Mic Bias",
+			"Mic Bias",		"Main Mic",
 			"Line Out",		"LLOUT",
 			"Line Out",		"RLOUT",
 			"J3A LINE1L",		"JAMR3 Stereo Aux In",
