--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -263,6 +263,8 @@ CONFIG_DISPLAY_CONNECTOR_DVI=y
 CONFIG_DISPLAY_CONNECTOR_HDMI=y
 CONFIG_DISPLAY_PANEL_DPI=y
 CONFIG_DISPLAY_PANEL_TFCS9700=y
+CONFIG_VIDEO_SERLINK=y
+CONFIG_VIDEO_DSERLINK=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_PLATFORM=y
