arm: dts: dra7xx: Add VIN6_SEL_S0 gpio for camera node
This gpios allows to choose between mcasp3 and vin6a

Change-Id: Id785f1654657f574e9a9fde8a17e01a8679a2b77
Signed-off-by: Nikhil Devshatwar <nikhil.nd@ti.com>

--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -844,7 +844,8 @@
 			<&gpio6 17 0>,		/* OV_PWDN */
 			<&gpio2 29 0>,		/* DEMUX_FPD_A */
 			<&gpio1 4 0>,		/* DEMUX_FPD_B */
-			<&gpio6 7 0>;		/* DEMUX_FPD_C */
+			<&gpio6 7 0>,		/* DEMUX_FPD_C */
+			<&pcf_hdmi 1 0>;	/* VIN6_SEL_S0 */
 		ovnode = <&i2c2>;
 	};
 
@@ -871,7 +872,8 @@
 			<&gpio6 17 0>,		/* OV_PWDN */
 			<&gpio2 29 0>,		/* DEMUX_FPD_A */
 			<&gpio1 4 0>,		/* DEMUX_FPD_B */
-			<&gpio6 7 0>;		/* DEMUX_FPD_C */
+			<&gpio6 7 0>,		/* DEMUX_FPD_C */
+			<&pcf_hdmi 1 0>;	/* VIN6_SEL_S0 */
 		ovnode = <&i2c2>;
 	};
 
