arm: dra7xx: dtsi: Add syscon property for SMA_SW1 regmap
VIP driver needs to invert the pixel clock when sampling at
falling edge, this is done by setting SMA_SW1 regmap.
Add the property in all instances of VIP nodes.

Change-Id: Ie5e5b28e437b603dea8777e0bd36f0f389904840
Signed-off-by: Nikhil Devshatwar <nikhil.nd@ti.com>

--- a/arch/arm/boot/dts/dra7.dtsi
+++ b/arch/arm/boot/dts/dra7.dtsi
@@ -1477,6 +1477,8 @@
 				     <0 0x99 0x4>;
 			clocks = <&vip1_gclk_mux>;
 			clock-names = "fck";
+			syscon-smasw = <&tisyscon_dispc>;
+
                         #address-cells = <1>;
                         #size-cells = <0>;
 
@@ -1502,6 +1504,8 @@
 				     <0 0x97 0x4>;
 			clocks = <&vip2_gclk_mux>;
 			clock-names = "fck";
+			syscon-smasw = <&tisyscon_dispc>;
+
                         #address-cells = <1>;
                         #size-cells = <0>;
 
@@ -1527,6 +1531,8 @@
 				     <0 0x95 0x4>;
 			clocks = <&vip3_gclk_mux>;
 			clock-names = "fck";
+			syscon-smasw = <&tisyscon_dispc>;
+
                         #address-cells = <1>;
                         #size-cells = <0>;
 
