ARM: omap2plus_defconfig: Add DRA7EVM Audio support
Add DRA7EVM Audio support to omap2plus

Change-Id: I9484ebf3e39db1a5934670eaaf3303f72f247bfb
Signed-off-by: Charulatha Varadarajan <charu@ti.com>

--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -289,6 +289,7 @@ CONFIG_SND_OMAP_SOC=y
 CONFIG_SND_OMAP_SOC_HDMI=y
 CONFIG_SND_AM33XX_SOC_EVM=m
 CONFIG_SND_AM43XX_SOC_EPOS_EVM=m
+CONFIG_SND_SOC_DRA7_EVM=y
 CONFIG_SND_OMAP_SOC_OMAP_TWL4030=m
 CONFIG_SND_OMAP_SOC_DRA7EVM=y
 CONFIG_SND_OMAP_SOC_OMAP_ABE_TWL6040=m
