--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -421,6 +421,7 @@ CONFIG_MAGIC_SYSRQ=y
 # CONFIG_ARM_UNWIND is not set
 CONFIG_SECURITY=y
 CONFIG_CRYPTO_TEST=m
+CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_ARC4=y
