--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -557,7 +557,7 @@
 			0x2d4 0x001a1	/* mcasp1_axr8.mcasp6_axr0	Mode1.Output.PD */
 			0x2d8 0x401a1	/* mcasp1_axr9.mcasp6_axr1	Mode1.Input.PD */
 			0x2dc 0x001a1	/* mcasp1_axr10.mcasp6_clkx	Mode1.Output.PD */
-			0x2e0 0x001a1	/* mcasp1_axr11.mcasp6_fsx	Mode1.Output.PD */
+			0x2e0 0x401a1	/* mcasp1_axr11.mcasp6_fsx	Mode1.Bidirectional.PD */
 		>;
 	};
 
