--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -437,6 +437,21 @@ config RADIO_CMEM_BUF
 	default y
 	help
 	  Use CMEM Allocator for large buffer sharing in Radio
+
+config OMAP4_HS_SECURE_SRAM_SIZE
+	int "Secure SRAM Resized size for OMAP4 HS devices in KB"
+	depends on ARCH_OMAP4
+	default 52
+	help
+	  resized secure SRAM size for OMAP4
+
+config OMAP5_HS_SECURE_SRAM_SIZE
+	int "Secure SRAM Resized size for OMAP5 HS devices in KB"
+	depends on SOC_OMAP5
+	default 120
+	help
+	  resized secure SRAM size for OMAP5
+
 endmenu
 
 endif
