dts/dra7: adding the lg101 panel driver node.
This panel driver is connected to J6 EVM over FPDLink.
And connected to DPI3 encoder.

Change-Id: Id5f209e43f92fabef0d41968f5ee15d8fc305b7f
Signed-off-by: Somnath Mukherjee <somnath@ti.com>

--- a/arch/arm/boot/dts/dra7-evm.dts
+++ b/arch/arm/boot/dts/dra7-evm.dts
@@ -148,6 +148,14 @@
        btwilink {
                compatible = "btwilink";
        };
+
+	/* 10" LCD panel driver - connected via LVDS */
+	lg101 {
+		compatible = "ti,lg101";
+		gpios = <&gpio21 0 0>; /* pcf8575@21 P0, SEL_GPMC_AD_VID_S0 */
+		video-source = <&dpi3>;
+		data-lines = <24>;
+	};
 };
 
 &dra7_pmx_core {
@@ -773,6 +781,7 @@
 		video-source = <&dpi1>;
 		data-lines = <24>;
 	};
+
 
 	mxt244: touchscreen@4a {
 		compatible = "atmel,mXT244";
