config_fragments: android: omap: Enable USB as built-in
Enable USB drivers as built-in instead of modules:
  CONFIG_USB_XHCI_HCD - Override from ti_config_fragments/connectivity.cfg
  CONFIG_USB_DWC3 - Override from arch/arm/configs/omap2plus_defconfig
  CONFIG_USB_G_WEBCAM - Override from ti_config_fragments/connectivity.cfg

Also enable Android composite gadget:
  To enable this as built-in, USB_G_WEBCAM needs to be non module

Change-Id: If83b3cbef529cfada2de144fe19ed9cf8af1b175
Signed-off-by: Vishal Mahaveer <vishalm@ti.com>

--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -19,6 +19,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_FUSE_FS=y
+CONFIG_USB_G_ANDROID=y
 
 #enable RPMSG and REMOTEPROC as builtin
 CONFIG_REMOTEPROC=y
@@ -34,3 +35,8 @@ CONFIG_ADF=y
 CONFIG_ADF_FBDEV=y
 CONFIG_ADF_MEMBLOCK=y
 CONFIG_DMA_SHARED_BUFFER=y
+
+#enable USB as builtin
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_DWC3=y
+CONFIG_USB_G_WEBCAM=n
