HACK: Enable lg101 dpi panel for dra74 and dra72 evms
Change-Id: Ibfdd0d4368030f0e09238e42995b2e1316a912f2
Signed-off-by: Subramaniam Chanderashekarapuram <c.a.subramaniam@gmail.com>

--- a/arch/arm/boot/dts/dra72-evm-lcd7.dts
+++ b/arch/arm/boot/dts/dra72-evm-lcd7.dts
@@ -8,3 +8,10 @@
 
 #include "dra72-evm.dts"
 #include "dra7xx-evm-lcd7.dtsi"
+
+
+/*
+&mxt244 {
+	interrupt-parent = <&gpio1>;
+	interrupts = <15 IRQ_TYPE_EDGE_RISING>;
+};*/
