--- a/arch/arm/boot/dts/dra7-evm-lcd10.dts
+++ b/arch/arm/boot/dts/dra7-evm-lcd10.dts
@@ -8,3 +8,18 @@
 
 #include "dra7-evm.dts"
 #include "dra7xx-evm-lcd10.dtsi"
+
+/* override pinmux for tsc irq line on dra74x */
+&tsc_pins {
+		  pinctrl-single,pins = <
+			  0x420 (PIN_INPUT_PULLDOWN | MUX_MODE14) /* gpio1_2 */
+			  >;
+	  };
+
+/* HACK: should be re-using sys-nirq2 */
+/* override the interrupt source for 10" on dra72 */
+&ldc3001 {
+	interrupt-parent = <&gpio1>;
+	interrupts = <2 IRQ_TYPE_EDGE_RISING>;
+	pinctrl-0 = <&tsc_pins>;
+};
