--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -20,6 +20,8 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_FUSE_FS=y
 CONFIG_USB_G_ANDROID=y
+CONFIG_PM_WAKELOCKS=y
+CONFIG_USB_OTG_WAKELOCK=y
 
 #enable RPMSG and REMOTEPROC as builtin
 CONFIG_REMOTEPROC=y
