defconfig/omap2plus: enabled fpd display panel by default
Change-Id: I8119117d9635dcbe992f8dc7e797aa8bf2c126f4
Signed-off-by: Somnath Mukherjee <somnath@ti.com>

--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -261,6 +261,7 @@ CONFIG_DISPLAY_CONNECTOR_DVI=y
 CONFIG_DISPLAY_CONNECTOR_HDMI=y
 CONFIG_DISPLAY_PANEL_DPI=y
 CONFIG_DISPLAY_PANEL_TFCS9700=y
+CONFIG_DISPLAY_PANEL_LG101=y
 CONFIG_VIDEO_SERLINK=y
 CONFIG_VIDEO_DSERLINK=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
