ARM: dts: am57xx-beagle-x15: Hook up GPU device to gpu_voltage domain
GPU device should be hooked to gpu voltage domain for sgxfreq to function.

Change-Id: Ib81717e6536a28232ecd56e98576b15a365bf376
Signed-off-by: Nishanth Menon <nm@ti.com>

--- a/arch/arm/boot/dts/am57xx-beagle-x15.dts
+++ b/arch/arm/boot/dts/am57xx-beagle-x15.dts
@@ -646,6 +646,11 @@
 	voltage-tolerance = <1>;
 };
 
+&gpu {
+	gpu0-voltdm = <&voltdm_gpu>;
+	voltage-tolerance = <1>;
+};
+
 &mac {
 	status = "okay";
 	pinctrl-names = "default", "sleep";
