ARM: dts: dra7: fix gpu irq number
Use crossbar irq number instead of mpu irq number. The k3.14
device tree bindings for interrupts require the crossbars numbers
and the translation to mpu irq number is done dynamically.

Change-Id: I519d0e9c4963197faa776077bb870ddf23dd9029
Signed-off-by: Gowtham Tammana <g-tammana@ti.com>

--- a/arch/arm/boot/dts/dra7.dtsi
+++ b/arch/arm/boot/dts/dra7.dtsi
@@ -821,7 +821,7 @@
 		gpu: gpu@0x56000000 {
 			compatible = "ti,omap4-gpu";
 			reg = <0x56000000 0xffff>;
-			interrupts = <0 21 0x4>;
+			interrupts = <GIC_SPI 16 IRQ_TYPE_LEVEL_HIGH>;
 			ti,hwmods = "gpu";
 			operating-points = <
 				/* kHz    uV */
